--- a/pom.xml
+++ b/pom.xml
@@ -250,6 +250,11 @@
             <artifactId>rt</artifactId>
             <version>2.3.3</version>
         </dependency>
+        <!--<dependency>
+            <groupId>net.freeutils</groupId>
+            <artifactId>jlhttp</artifactId>
+            <version>2.6</version>
+        </dependency>-->
     </dependencies>
 
     <build>
